[package]
name = "pluto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pluto"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
derivative = "2.2.0"
fixed = "1.27.0"
fixed-macro = "1.2.0"
clippy = { version = "0.0.302", optional = true }
uint = "0.9.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
cfg-if = "1.0"
pyth-solana-receiver-sdk = { version = "0.3.1" }
